Bug 222654: global/scrollbars.css for native scrollbars different on Mac (many Firefox themes break scrollbars on Mac). Use nativescrollbars.css and xulscrollbars.css and ship both files on all platforms. r=neil, kevin, sr=bz